--- a/index.html
+++ b/index.html
@@ -1,191 +1,68 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Novagam | Finops Consulting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Novagam | Finops Consulting</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Montserrat', Arial, sans-serif;
-      background: #f2f4f7;
-      color: #162c5b;
-    }
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 32px 8vw 14px 8vw;
-      background: #162c5b;
-      color: #fff;
-    }
-    .logo { width:80px; }
-    .langs button {
-      background: none; border: none;
-      font-weight: bold;
-      font-size: 1.1em;
-      cursor: pointer;
-      padding: 0 13px;
-      color: #00c1e4;
-    }
-    .title { font-size:2.2em; font-weight:900; margin-left:22px; letter-spacing:0.01em; }
-    .hero {
-      text-align: center;
-      padding: 50px 8vw 32px 8vw;
-      background: #fff;
-      margin-bottom: 0;
-      box-shadow: 0 2px 20px #0001;
-      border-radius: 0 0 18px 18px;
-    }
-    .hero h1 {font-size:2.5em; font-weight:900; margin-bottom:10px; color: #2843A0;}
-    .hero p {font-size:1.20em; margin-bottom:28px;color: #2843A0; }
-    .cta {
-      background: linear-gradient(90deg,#00c1e4 0,#2843a0 100%);
-      color: #fff; border:none; border-radius:7px;
-      padding: 14px 30px; font-size:1.18em; cursor:pointer;
-      font-weight: bold; box-shadow: 0 2px 14px #00c1e455;
-      letter-spacing: 0.04em;
-      transition:background 0.2s;
-    }
-    .cta:hover { background:linear-gradient(90deg,#2843a0 0,#00c1e4 100%);}
-    .services {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; padding: 38px 4vw; background: #EEF2F8;
-      border-radius:18px; margin: 38px 6vw;
-      box-shadow: 0 2px 20px #0001;
-    }
-    .service-card {
-      background: #fff;
-      border-radius: 14px;
-      box-shadow: 0 4px 18px #162c5b11;
-      padding: 34px 23px;
-      width: 290px;
-      text-align: center;
-      border: 1px solid #d8e0ee;
-      transition: transform 0.2s;
-    }
-    .service-card:hover { transform: scale(1.04); border-color: #00c1e4;}
-    .service-icon { font-size: 3em; color: #00c1e4; margin-bottom: 14px;}
-    .contact {
-      padding:44px 10vw;
-      background:#fff;
-      border-radius: 16px;
-      margin: 34px 0;
-      box-shadow: 0 2px 20px #0001;
-    }
-    .form { display:flex; flex-direction:column; max-width:400px; margin: auto;}
-    .form input, .form textarea {
-      margin-bottom:20px; padding:12px; border-radius:7px; border:1px solid #d8e0ee;
-      font-size:1.06em;
-    }
-    .form button {
-      background:linear-gradient(90deg,#00c1e4 0,#2843a0 100%);
-      color:#fff; border:none; border-radius:6px; padding:12px 20px; font-size:1.13em; cursor:pointer;
-      font-weight: bold;
-      box-shadow: 0 2px 14px #00c1e455;
-      letter-spacing:0.02em;
-    }
-    footer {
-      background: #162c5b;
-      color: #fff;
-      text-align: center;
-      padding:30px 4vw; font-size:0.95em;
-      font-weight: 400;
-      letter-spacing: 0.03em;
-    }
-    @media (max-width:800px){
-      .services{flex-direction:column;align-items:center;}
-      .header, .contact{padding:24px 5vw;}
-    }
+    body { font-family: 'Montserrat', Arial, sans-serif; background: #f9fafb; margin: 0; color: #222; }
+    .container { max-width: 700px; margin: 40px auto; background: #fff; padding: 36px 34px; border-radius: 16px; box-shadow: 0 8px 24px #0001;}
+    .logo { width: 110px;}
+    .header { display: flex; align-items: center; gap: 20px; }
+    .title { font-size: 2.2em; font-weight: 900;}
+    .switch { float: right;}
+    .section { margin-top: 24px;}
+    .services { background: #eef2f6; padding: 14px; border-radius: 8px;}
+    .contact-link { font-size: 1em; color: #3384fc; text-decoration: underline; }
+    .toggle { cursor:pointer; background:transparent; border:none; font-weight:bold; padding:0 10px; font-size:1em;}
   </style>
 </head>
 <body>
-  <div class="header">
-      <img src="Logo-sans-Inc.jpg" alt="Novagam Logo" class="logo">
-      <span class="title">Novagam</span>
-      <span class="langs">
-          <button onclick="switchLang('fr')">FR</button>
-          <button onclick="switchLang('en')">EN</button>
+  <div class="container">
+    <div class="header">
+      <img src="Logo-sans-Inc.jpg" alt="Novagam Logo" class="logo"/>
+      <span class="title" id="company-name">Novagam</span>
+      <span class="switch">
+        <button class="toggle" onclick="switchLang('fr')">FR</button> |
+        <button class="toggle" onclick="switchLang('en')">EN</button>
       </span>
+    </div>
+    <div id="content-fr" style="display:block;">
+      <h2>La solution Finops, nouvelle génération</h2>
+      <div class="section"><b>Nous accompagnons les organisations pour maximiser la valeur du cloud tout en maîtrisant leurs coûts.</b></div>
+      <div class="section services">
+        <ul>
+          <li>Analyse et optimisation des coûts cloud</li>
+          <li>Conseil en stratégie Finops</li>
+          <li>Formations personnalisées</li>
+          <li>Accompagnement à la transformation numérique</li>
+        </ul>
+      </div>
+      <div class="section">
+        <b>Contact :</b> <a href="mailto:contact@novagam.com" class="contact-link">contact@novagam.com</a>
+      </div>
+    </div>
+    <div id="content-en" style="display:none;">
+      <h2>The next generation Finops Solution</h2>
+      <div class="section"><b>We help organizations maximize cloud value while controlling costs.</b></div>
+      <div class="section services">
+        <ul>
+          <li>Cloud cost analysis & optimization</li>
+          <li>Finops strategy consulting</li>
+          <li>Customized training sessions</li>
+          <li>Guidance for digital transformation</li>
+        </ul>
+      </div>
+      <div class="section">
+        <b>Contact:</b> <a href="mailto:contact@novagam.com" class="contact-link">contact@novagam.com</a>
+      </div>
+    </div>
   </div>
-  <div class="hero" id="hero-fr">
-    <h1>Experts Finops & Cloud au service de votre succès</h1>
-    <p>Novagam accompagne les organisations modernes dans la maîtrise des coûts Cloud et la maximisation de la valeur métier. Consulting, audits, formation : un seul interlocuteur, toute votre performance Cloud.</p>
-    <button class="cta" onclick="document.getElementById('contact-fr').scrollIntoView({behavior:'smooth'})">Contactez-nous</button>
-  </div>
-  <div class="hero" id="hero-en" style="display:none;">
-    <h1>Finops & Cloud Experts for your success</h1>
-    <p>Novagam empowers modern organizations to master Cloud costs and maximize business value. Consulting, audits, training : one trusted partner, all your Cloud performance.</p>
-    <button class="cta" onclick="document.getElementById('contact-en').scrollIntoView({behavior:'smooth'})">Contact us</button>
-  </div>
-  <section class="services" id="services-fr">
-    <div class="service-card">
-      <span class="material-icons service-icon">trending_up</span>
-      <h3>Optimisation des coûts Cloud</h3>
-      <p>Analyse précise, recommandations actionnables, reporting enrichi pour vos équipes.</p>
-    </div>
-    <div class="service-card">
-      <span class="material-icons service-icon">school</span>
-      <h3>Formations personnalisées</h3>
-      <p>Des workshops et formations adaptées selon votre maturité Finops.</p>
-    </div>
-    <div class="service-card">
-      <span class="material-icons service-icon">construction</span>
-      <h3>Conseil en stratégie Finops</h3>
-      <p>Transformation numérique orientée valeur, alignée à vos objectifs business.</p>
-    </div>
-  </section>
-  <section class="services" id="services-en" style="display:none;">
-    <div class="service-card">
-      <span class="material-icons service-icon">trending_up</span>
-      <h3>Cloud Cost Optimization</h3>
-      <p>Precise analysis, actionable recommendations, advanced reporting for your teams.</p>
-    </div>
-    <div class="service-card">
-      <span class="material-icons service-icon">school</span>
-      <h3>Tailored Training</h3>
-      <p>Workshops and trainings custom-fit for your Finops maturity and profile.</p>
-    </div>
-    <div class="service-card">
-      <span class="material-icons service-icon">construction</span>
-      <h3>Finops Strategy Consulting</h3>
-      <p>Business value-focused digital transformation, aligned with your goals.</p>
-    </div>
-  </section>
-  <section class="contact" id="contact-fr">
-    <h2>Contact</h2>
-    <p><b>Email :</b> <a href="mailto:contact@novagam.com" class="contact-link">contact@novagam.com</a></p>
-    <p><b>Téléphone :</b> <a href="tel:+15145655359" class="contact-link">+1 514-565-5359</a></p>
-    <form class="form" name="contact">
-      <input type="text" placeholder="Nom" required>
-      <input type="email" placeholder="Email" required>
-      <textarea rows="4" placeholder="Votre message" required></textarea>
-      <button type="submit">Envoyer</button>
-    </form>
-  </section>
-  <section class="contact" id="contact-en" style="display:none;">
-    <h2>Contact</h2>
-    <p><b>Email:</b> <a href="mailto:contact@novagam.com" class="contact-link">contact@novagam.com</a></p>
-    <p><b>Phone:</b> <a href="tel:+15145655359" class="contact-link">+1 514-565-5359</a></p>
-    <form class="form" name="contact">
-      <input type="text" placeholder="Name" required>
-      <input type="email" placeholder="Email" required>
-      <textarea rows="4" placeholder="Your message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-  <footer>
-    © 2025 Novagam. Finops Consulting Canada · Spain | contact@novagam.com
-  </footer>
   <script>
     function switchLang(lang) {
-      document.getElementById('hero-fr').style.display = lang === 'fr' ? 'block' : 'none';
-      document.getElementById('services-fr').style.display = lang === 'fr' ? 'flex' : 'none';
-      document.getElementById('contact-fr').style.display = lang === 'fr' ? 'block' : 'none';
-      document.getElementById('hero-en').style.display = lang === 'en' ? 'block' : 'none';
-      document.getElementById('services-en').style.display = lang === 'en' ? 'flex' : 'none';
-      document.getElementById('contact-en').style.display = lang === 'en' ? 'block' : 'none';
+      document.getElementById('content-fr').style.display = lang === 'fr' ? 'block' : 'none';
+      document.getElementById('content-en').style.display = lang === 'en' ? 'block' : 'none';
     }
   </script>
 </body>
