--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Novagam | Finops Consulting</title>
   <style>
-    body { font-family: 'Montserrat', Arial, sans-serif; background: #f9fafb; margin: 0; color: #222; }
-    .container { max-width: 700px; margin: 40px auto; background: #fff; padding: 36px 34px; border-radius: 16px; box-shadow: 0 8px 24px #0001;}
+    body {
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin: 0; color: #222;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=85') no-repeat center center fixed;
+      background-size: cover;
+    }
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(245, 249, 251, 0.57);  /* Optionnel: léger voile pour lisibilité */
+      z-index: 1;
+      pointer-events: none;
+    }
+    .container {
+      position: relative;
+      max-width: 700px;
+      margin: 60px auto;
+      background: #fff;
+      padding: 36px 34px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px #0002;
+      z-index: 2;
+    }
     .logo { width: 110px;}
     .header { display: flex; align-items: center; gap: 20px; }
     .title { font-size: 2.2em; font-weight: 900;}
@@ -19,6 +41,8 @@
   </style>
 </head>
 <body>
+  <!-- overlay voile d’adoucissement, facultatif -->
+  <div class="overlay"></div>
   <div class="container">
     <div class="header">
       <img src="Logo-sans-Inc.jpg" alt="Novagam Logo" class="logo"/>
