--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0; color: #222;
-      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=85') no-repeat center center fixed;
+      background: url('Finopsbackground.png') no-repeat center center fixed;
       background-size: cover;
     }
     .overlay {
