--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0; color: #222;
       background: url('Finopsbackground.png') no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center center;
     }
     .overlay {
       position: fixed;
