--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0; color: #222;
       background: url('Finopsbackground.png') no-repeat center center fixed;
-      background-size: contain;
+      background-size: 100vw auto;
       background-repeat: no-repeat;
       background-position: center center;
     }
