--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     body {
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0; color: #222;
-      background: url('Finopsbackground.png') no-repeat center center fixed;
-      background-size: 100vw auto;
-      background-repeat: no-repeat;
-      background-position: center center;
+      overflow-x: hidden;
+      background: #f9fafb;
     }
-    .overlay {
+    .bg-fond-horizontal {
       position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(245, 249, 251, 0.57);  /* Optionnel: léger voile pour lisibilité */
-      z-index: 1;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: auto;
+      min-height: 100vh;
+      z-index: 0;
+      object-fit: cover;
+      object-position: center;
       pointer-events: none;
     }
     .container {
@@ -29,7 +31,7 @@
       padding: 36px 34px;
       border-radius: 16px;
       box-shadow: 0 8px 24px #0002;
-      z-index: 2;
+      z-index: 1;
     }
     .logo { width: 110px;}
     .header { display: flex; align-items: center; gap: 20px; }
@@ -43,8 +45,9 @@
   </style>
 </head>
 <body>
-  <!-- overlay voile d’adoucissement, facultatif -->
-  <div class="overlay"></div>
+  <!-- FOND HORIZONTAL SANS DÉFORMATION VERTICALE -->
+  <img src="Finopsbackground.png" class="bg-fond-horizontal" alt="" />
+  
   <div class="container">
     <div class="header">
       <img src="Logo-sans-Inc.jpg" alt="Novagam Logo" class="logo"/>
