--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0; color: #222;
-      background: url('fin1.png') no-repeat center center fixed;
+      background: url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed;
       background-size: cover;
     }
     .overlay {
